cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)
set(CMAKE_CXX_COMPILER "g++")
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DDEBUG -pthread" )
find_package (Threads REQUIRED)
aux_source_directory(./src/ DIR_SRCS)
include_directories(C:/Development/opencv411/include)
link_directories(C:/Development/opencv411/x64/mingw/lib)
link_libraries(libopencv_world411.dll)
add_executable(main ${DIR_SRCS})
set(CPACK_PROJECT_NAME ${StereoMatch})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
